@@ -3,6 +3,7 @@ This this the changelog file for the Pothos GUI toolkit.
 Release 0.3.0 (pending)
 ==========================
 
+- Cross platform styler for instances of QFormLayout
 - Graph editor tabs setDocumentMode() for OSX appearance
 - Ignore key press events from graph widgets with focus
 - Switch logger display to QPlainTextEdit for performance
